--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "json-server --watch data.json --port 5000"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
